# exhubris-demo

./: .gitignore  Cargo.toml  README.mkdn  app-g030.kdl  app.kdl  hubris-env.toml  openocd.cfg  rust-toolchain.toml
blinky/: Cargo.toml
blinky/src/: main.rs
chips/: stm32g030k8.kdl  stm32g031k8.kdl
display/: Cargo.toml  README.mkdn
display/src/: main.rs
ping/: Cargo.toml
ping/src/: main.rs
pong/: Cargo.toml  README.mkdn  build.rs  pong-idl.kdl  task.kdl
pong-api/: Cargo.toml  build.rs
pong-api/src/: lib.rs
pong/src/: main.rs
uart-echo/: Cargo.toml  build.rs
uart-echo/src/: main.rs
