[workspace]
resolver = "2"
members = ["pong", "ping", "pong-api"]

[workspace.dependencies]
userlib = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}
hubris-task-slots = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}
hubris-notifications = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}
hubris-build = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}
idyll_runtime = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}
drv-stm32xx-sys-api = {git = "https://github.com/cbiffle/exhubris", rev="696ecfe9197a27712a7f65deb901274f5553370d"}

[profile.release]
debug = true
lto = true
