[workspace]
resolver = "2"
members = ["pong", "ping", "pong-api", "blinky", "display", "uart-echo"]

[workspace.dependencies]
userlib = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
hubris-task-slots = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
hubris-notifications = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
hubris-build = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
hubris-build-util = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
idyll_runtime = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }
drv-stm32xx-sys-api = { git = "https://github.com/wnj/exhubris", rev = "0eb464f58fac611fa84ee589c9c7a46d5b2f9c20" }


[profile.release]
debug = true
lto = true
