[workspace]
resolver = "2"
members = ["pong", "ping", "pong-api"]

[workspace.dependencies]
userlib = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}
hubris-task-slots = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}
hubris-notifications = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}
hubris-build = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}
idyll_runtime = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}
drv-stm32xx-sys-api = {git = "https://github.com/cbiffle/exhubris", rev="69d2f5ca8017fc3aaf692eae9455ac9fcd883173"}

[profile.release]
debug = true
lto = true
