[package]
name = "uart-echo"
version = "0.1.0"
edition = "2021"

[features]
# It is annoying that the chip features are specified down to the package level,
# but, that is how the stm32-metapac do.
chip-stm32g031k8 = ["stm32-metapac/stm32g031k8"]
chip-stm32g030k8 = ["stm32-metapac/stm32g030k8"]

[dependencies]
stm32-metapac = { version = "15.0.0" }
userlib = { workspace = true, features = ["no-panic"] }
hubris-task-slots.workspace = true
hubris-notifications.workspace = true
drv-stm32xx-sys-api.workspace = true

[build-dependencies]
# hubris-build-util = { version = "0.1.0", path = "../../sys/build-util" }
hubris-build-util.workspace = true
serde_json = "1.0.133"
hubris-build.workspace = true
